--- a/app/src/main/res/layout/activity_simple_dht_main.xml
+++ b/app/src/main/res/layout/activity_simple_dht_main.xml
@@ -32,6 +32,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/button1"
